<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

        <TextView
            android:id="@+id/login"
            android:layout_width="114dp"
            android:layout_height="48dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="190dp"
            android:textSize="30sp"
            android:textColor="#F0F0F0"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal|bold"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/please_logi"
            android:layout_width="183dp"
            android:layout_height="21dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="121dp"
            android:gravity="top"
            android:text="@string/please_logi"
            android:textAppearance="@style/please_logi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.293"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="34dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/please_logi">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_login_1">

                <EditText
                    android:id="@+id/phoneInput"
                    android:layout_width="197dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="47dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:background="@null"
                    android:hint="@string/enter_mobil"
                    android:textColorHint="#EDE9E9"
                    android:inputType="phone"
                    android:textAppearance="@style/enter_mobil"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/phoneButtonInput"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="98dp"
            android:elevation="14dp"
            app:cardCornerRadius="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_login_2">


                <TextView
                    android:id="@+id/continueBut"
                    android:layout_width="129dp"
                    android:layout_height="31dp"
                    android:gravity="top"
                    android:text="@string/get_started"
                    android:textSize="20sp"
                    android:textColor="#393939"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.56"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>