<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Wallet">

        <androidx.cardview.widget.CardView
            android:id="@+id/rectangle_1"
            android:layout_width="344dp"
            android:layout_height="612dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            app:cardCornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_wallet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle_wallet_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/rectangle_2"
                    android:layout_width="321dp"
                    android:layout_height="188dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:elevation="14dp"
                    app:cardCornerRadius="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rectangle_wallet_2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <View
                            android:id="@+id/rectangle_7"
                            android:layout_width="109dp"
                            android:layout_height="42dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/rectangle_wallet_3"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.801"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/wallet_bala_text"
                            app:layout_constraintVertical_bias="0.168" />

                        <TextView
                            android:id="@+id/wallet_bala"
                            android:layout_width="100dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"

                            android:textAppearance="@style/wallet_bala"
                            app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
                            app:layout_constraintEnd_toEndOf="@+id/rectangle_7"
                            app:layout_constraintStart_toStartOf="@+id/rectangle_7"
                            app:layout_constraintTop_toTopOf="@+id/rectangle_7" />


                        <TextView
                            android:id="@+id/wallet_bala_text"
                            android:layout_width="138dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="28dp"
                            android:layout_marginEnd="30dp"
                            android:gravity="top"

                            android:fontFamily="sans-serif-medium"
                            android:textStyle="bold"
                            android:text="@string/wallet_bala"
                            android:textAppearance="@style/wallet_bala"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>


                        <ImageView
                            android:id="@+id/backButWallet"
                            android:layout_width="31dp"
                            android:layout_height="38dp"
                            android:layout_marginStart="10dp"
                            android:elevation="14dp"
                            android:src="@drawable/backbut"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.06" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <View
                    android:id="@+id/rectangle_6"
                    android:layout_width="211dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="67dp"
                    android:background="@drawable/rectangle_wallet_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

                <TextView
                    android:id="@+id/withdrawal_"
                    android:layout_width="180dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="top"
                    android:text="@string/withdrawal_limit"
                    android:textAppearance="@style/withdrawal_limit"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"
                    app:layout_constraintEnd_toEndOf="@+id/rectangle_6"
                    app:layout_constraintStart_toStartOf="@+id/rectangle_6"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_6" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/rectangle_8"
                    android:layout_width="321dp"
                    android:layout_height="338dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="26dp"
                    app:cardCornerRadius="35dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rectangle_6">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/withdrawalTransaction"
                        android:layout_width="303dp"
                        android:layout_height="228dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="90dp"
                        android:layout_marginRight="10dp"
                        android:visibility="visible" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="42dp"
                    app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
                    app:layout_constraintStart_toStartOf="@+id/rectangle_8"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_8"
                    tools:ignore="MissingConstraints">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/rectangle_0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rectangle_wallet_6"
                        android:elevation="14dp"
                        android:text="@string/number_text"
                        android:textAppearance="@style/number_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/amount_text"
                            android:layout_width="70dp"
                            android:layout_height="24dp"
                            android:gravity="top"
                            android:text="@string/amount_text"
                            android:textAppearance="@style/amount_text"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.079"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.448" />


                        <EditText
                            android:id="@+id/withdrawRequestedAmount"
                            android:layout_width="146dp"
                            android:layout_height="41dp"
                            android:layout_marginStart="10dp"
                            android:gravity="center"
                            android:elevation="15dp"
                            android:inputType="numberDecimal"
                            android:background="@drawable/rectangle_wallet_7"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/amount_text"
                            app:layout_constraintTop_toTopOf="@id/rectangle_0" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/withdrawButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:elevation="14dp"
            android:gravity="center"
            app:cornerRadius="20dp"
            android:text="@string/withdraw"
            android:textStyle="normal|bold"
            android:backgroundTint="#3c4952"
            android:textAppearance="@style/withdraw"
            android:textColor="#ffff"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.956" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

